--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
       "\n",
       "----------------------------------------------------------------\n",
       "Comparación de modelos \n",
-      "---------------------------------------------------------------- \n",
+      "------------------------------------------------------------------\n",
       "\n",
       "Modelos a utilizar:\n",
       "--------------------------\n",
@@ -292,7 +292,10 @@
       "0  Generado  46027.000000 -100428.000000\n",
       "1     SKLEA  47513.214989 -110009.696594\n",
       "\n",
-      "Operaciones de los primero 10 regigistros-------------\n",
+      "\n",
+      "----------------------------------------------------------------\n",
+      "Operaciones de los primero 10 regigistros\n",
+      "------------------------------------------------------------------\n",
       "\n",
       "    YGenerado       YSklearn       Promedio\n",
       "0    368216.0  380105.719914  374160.859957\n",
@@ -579,13 +582,14 @@
     "        \n",
     "        print  (\"\\n\\n----------------------------------------------------------------\")\n",
     "        print (\"Comparación de modelos \") \n",
-    "        print  (\"---------------------------------------------------------------- \\n\")\n",
+    "        print  (\"------------------------------------------------------------------\\n\")\n",
     "        print (\"Modelos a utilizar:\")\n",
     "        print  (\"--------------------------\\n\")\n",
     "        print  (Modelos)\n",
     "       \n",
-    "    \n",
-    "        print  (\"\\n\\nOperaciones de los primero 10 regigistros-------------\\n\")\n",
+    "        print  (\"\\n\\n----------------------------------------------------------------\")\n",
+    "        print  (\"Operaciones de los primero 10 regigistros\")\n",
+    "        print  (\"------------------------------------------------------------------\\n\")\n",
     "        YGenerado =  Modelos.iloc[0,1]*X + Modelos.iloc[0,1]\n",
     "        YSklearn = Modelos.iloc[1,1]*X + Modelos.iloc[1,1]\n",
     "        Promedio = (Modelos.iloc[0,1]*X + Modelos.iloc[0,1] +  Modelos.iloc[1,1]*X + Modelos.iloc[1,1]) /2\n",
